StringsFirstAssignments/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments
-d
A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\doc
-encoding
UTF-8
-charset
UTF-8
A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\Part4.java
<---- end of javadoc command ---->
Loading source file A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\Part4.java...
Constructing Javadoc information...
A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\Part4.java:10: error: cannot find symbol
    public ArrayList<String> youtuber (String linkList) {
           ^
  symbol:   class ArrayList
  location: class Part4
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\doc\Part4.html...
A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\Part4.java:9: warning - @Daniel is an unknown tag.
A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\Part4.java:9: warning - @1.0 is an unknown tag.
Generating A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\doc\package-frame.html...
Generating A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\doc\package-summary.html...
Generating A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\doc\allclasses-frame.html...
Generating A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\doc\allclasses-noframe.html...
Generating A:\Desktop\School\Coursera\Coursera Java\StringsFirstAssignments\doc\index.html...
3 warnings
